Migrated to PaperMC to add more functionality. Replaced some deprecated code that was a result of the migration. Finished the main functionality of the plugin. Added a scoreboard to track the progress.